Fix login dropdown; fix faculty checkbox on finish-profile page Fix layout of Subjects on phone Fix finish-profile on IE

--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -4,18 +4,15 @@
 .subjects-page {
     .container {
         display: flex;
+        flex-flow: row wrap;
+        height: 100%;
         margin: 0 auto;
+        max-width: $boxed-width;
         padding: 0 1.5rem;
         width: 100%;
-        height: 100%;
-        max-width: $boxed-width;
 
-        @include tablet {
-            flex-flow: row wrap;
-        }
-
-        @include desktop {
-            flex-flow: row wrap;
+        @include phone {
+            display: block;
         }
     }
 
@@ -49,7 +46,7 @@
 
         .container {
             @include tablet {
-                flex-flow: column nowrap;
+                display: block;
             }
         }
 
